--- a/.gitignore
+++ b/.gitignore
@@ -1355,3 +1355,4 @@ UpgradeLog*.XML
 /WebAndUI/HTML/V. Others/03. HW_Vuvedenie-v-HTML/Homework_Intro In HTML/Html Basic Excersice 1.html
 /WebAndUI/HTML/V. Others/03. HW_Vuvedenie-v-HTML/Homework_Intro In HTML/Html Basic Excersice 2.html
 /WebAndUI/HTML/V. Others/Versions.txt
+/CSharp/HQC/99. Exam others/05. ExamFileForEvaluation
